# rizin-rs

./: .gitmodules  Cargo.toml  README.md  build.rs  wrapper.h
.github/workflows/: rust.yml
benches/: my_benchmark.rs
examples/: il-test.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: debug_abbrev.rs  debug_aranges.rs  debug_info.rs  debug_line.rs  dw.rs
il-tests/: Cargo.toml  build.rs
il-tests/src/: lib.rs  main.rs
sleigh-rs/src/: lib.rs
sleigh-rs/src/semantic/: pattern.rs
src/: lib.rs  main.rs  wrapper.rs
