[package]
name = "rizin-rs"
version = "0.1.2"
edition = "2021"
license = "LGPL-3.0-only"
description = "Rust bindings for rizin"
exclude = ["rizin/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.69.4"

[profile.dev]
rpath = true

[lib]
doctest = false

[workspace]
members = [
    "il-tests"
]
