[package]
name = "il-tests"
version = "0.1.0"
edition = "2021"
license = "LGPL-3.0-only"
description = "Rizin's asm and il test generator"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
dashmap = "5.5.3"
hex = "0.4.3"
itertools = "0.13.0"
rayon = "1.10.0"
sleigh-rs = "0.1.5"

[dependencies.rizin-rs]
path = ".."

[build-dependencies]
anyhow = "1.0.86"
sleigh2rust = "0.1.6"
